# nstu-labs

./: .clangd  .gitignore  README.md
term_3/coursework/: .clang-format  1.ssa  CMakeLists.txt  compile_commands.json
term_3/coursework/.cache/clangd/index/: main.cpp.5DCD71871EF511B3.idx  memory.hpp.75E38B356BA55B1F.idx  memory_test.cpp.F5BF38FF48943DE3.idx  sorted_string_array.cpp.93D9F4AA5012F78C.idx  sorted_string_array.hpp.E435703911FA84C6.idx  testing.hpp.74B4DCB91D9BF52F.idx
term_3/coursework/assets/: 1.test  data1-1.test  data1-2.test  data1-3.test  data2-1.test  data2-2.test  data2-3.test  test1.py
term_3/coursework/meta/: main-figure1.md5  main-figure2.md5  main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  main.xdv
term_3/coursework/meta/.auctex-auto/: main.el
term_3/coursework/meta/_minted-main/: 67DA8C8B88D69446E0ABB5FD4803AEA2F1AF6934EBCEC12043922F45B0310B3B.pygtex  8DF5AE10860C6FF90341E748E58A340DF1AF6934EBCEC12043922F45B0310B3B.pygtex  A00089D88A2E202931921A0D96B33C190AAE8D9D86BE7CDBF140713534F7D753.pygtex  A7B391BC931315AC02E1C5AE152BA87EF1AF6934EBCEC12043922F45B0310B3B.pygtex  CAE283BC4D3DE271D679FE6099097C94F1AF6934EBCEC12043922F45B0310B3B.pygtex  DBD6DB3DD05A301A884D6E53C78DFCD8F1AF6934EBCEC12043922F45B0310B3B.pygtex  FC6A5880FD48BC487C4496B0B13A8315F1AF6934EBCEC12043922F45B0310B3B.pygtex
term_3/coursework/src/: CMakeLists.txt  commands.cpp  commands.hpp  main.cpp  sorted_string_array.cpp  sorted_string_array.hpp
term_3/coursework/src/tests/: CMakeLists.txt  bench_add.cpp
term_3/lab_1/: main.cpp  matrix.cpp  matrix.hpp
(+116 files in other folders)
